--- a/events/_posts/2017-01-09-hacksxb-47.markdown
+++ b/events/_posts/2017-01-09-hacksxb-47.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'HackSXB #47 : Hack et gaming chez Ludus Académie'
+title: 'HackSXB #47 - Hack et gaming chez Ludus Académie'
 date: '2017-01-09 10:44:48 +0200'
 event_date: '2017-12-16 19:00:00 +0200'
 photo: event-hacksxb47.jpg
